tests/fixtures/invalid/invalid_line_format.desktop
[Desktop Entry]
Type=Application
Name=Invalid Line Format
Exec=test-app
This line has no equals sign
Key=Value
